force-app/main/default/objects/Market_Value__c/Market_Value__c.object-meta.xml
<CustomObject>
    <description>Market Value data from external partner</description>
    <label>Market Value</label>
    <nameField>
        <displayFormat>MDV-{000000}</displayFormat>
        <label>Market Value Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Market Values</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>