force-app/main/default/objects/Market_Value__c/fields/Competitive_Vehicles_For_Sale__c.field-meta.xml
<CustomField>
    <fullName>Competitive_Vehicles_For_Sale__c</fullName>
    <description>Number of vehicles in Indicata system that is comparable to vehicles in Xfleet based on the calculations</description>
    <inlineHelpText>Number of vehicles in Indicata system that is comparable to vehicles in Xfleet based on the calculations</inlineHelpText>
    <label>Competitive Vehicles For Sale</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>