force-app/main/default/objects/Market_Value__c/fields/identMake__c.field-meta.xml
<CustomField>
    <fullName>identMake__c</fullName>
    <description>Brand name</description>
    <label>Brand</label>
    <length>18</length>
    <type>Text</type>
</CustomField>