force-app/main/default/objects/Market_Value__c/fields/identModel__c.field-meta.xml
<CustomField>
    <fullName>identModel__c</fullName>
    <label>Model</label>
    <length>250</length>
    <type>Text</type>
</CustomField>