force-app/main/default/objects/Market_Value__c/fields/Max_Purchase_Value__c.field-meta.xml
<CustomField>
    <fullName>Max_Purchase_Value__c</fullName>
    <description>Price we should buy the car for a profit</description>
    <inlineHelpText>Price we should buy the car for a profit</inlineHelpText>
    <label>Max Purchase Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>