force-app/main/default/objects/Market_Value__c/fields/MDS_Competitive_Vehicles_Sold__c.field-meta.xml
<CustomField>
    <fullName>MDS_Competitive_Vehicles_Sold__c</fullName>
    <description>Number of similar cars sold within the last 45 days</description>
    <inlineHelpText>Number of similar cars sold within the last 45 days</inlineHelpText>
    <label>MDS-Competitive Vehicles Sold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>