force-app/main/default/objects/Market_Value__c/fields/MDS_Make__c.field-meta.xml
<CustomField>
    <fullName>MDS_Make__c</fullName>
    <description>MDS Value for a brand (E.g BMW, Opel, Ford etc.)</description>
    <inlineHelpText>MDS Value for a brand (E.g BMW, Opel, Ford etc.)</inlineHelpText>
    <label>MDS-Make</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>