force-app/main/default/objects/Market_Value__c/fields/MDS_Market__c.field-meta.xml
<CustomField>
    <fullName>MDS_Market__c</fullName>
    <description>MDS value for all cars in the market (or vans)</description>
    <inlineHelpText>MDS value for all cars in the market (or vans)</inlineHelpText>
    <label>MDS-Market</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>