force-app/main/default/objects/Market_Value__c/fields/MDS_Overall__c.field-meta.xml
<CustomField>
    <fullName>MDS_Overall__c</fullName>
    <description>MDS Value for general cars (E.g. BMW 100 series, M-Sport, etc.)</description>
    <inlineHelpText>MDS Value for general cars (E.g. BMW 100 series, M-Sport, etc.)</inlineHelpText>
    <label>MDS-Overall</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>