force-app/main/default/objects/Market_Value__c/fields/MDS_Similar__c.field-meta.xml
<CustomField>
    <fullName>MDS_Similar__c</fullName>
    <description>MDS-value for a similar car. (E.g. if the car comes in hatchback, sedan or station car version etc.)</description>
    <inlineHelpText>MDS-value for a similar car. (E.g. if the car comes in hatchback, sedan or station car version etc.)</inlineHelpText>
    <label>MDS-Similar</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>