force-app/main/default/objects/Market_Value__c/fields/Price_date__c.field-meta.xml
<CustomField>
    <fullName>Price_date__c</fullName>
    <description>The date when the data has been extracted from Indicata system</description>
    <inlineHelpText>The date when the data has been extracted from Indicata system</inlineHelpText>
    <label>Price Date</label>
    <type>Date</type>
</CustomField>