force-app/main/default/objects/Market_Value__c/fields/Profit_Retail__c.field-meta.xml
<CustomField>
    <fullName>Profit_Retail__c</fullName>
    <formula>Retail_price__c -  Steel_Price__c -  Tax_Value__c -  VAT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profit Retail</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>