force-app/main/default/objects/Market_Value__c/fields/Profit_Wholesale__c.field-meta.xml
<CustomField>
    <fullName>Profit_Wholesale__c</fullName>
    <formula>Wholesale_Price__c -  Steel_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profit Wholesale</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>