force-app/main/default/objects/Market_Value__c/fields/Retail_Currency__c.field-meta.xml
<CustomField>
    <fullName>Retail_Currency__c</fullName>
    <label>Retail Currency</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EUR</fullName>
            </value>
            <value>
                <fullName>DKK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>