force-app/main/default/objects/Market_Value__c/fields/Retail_price__c.field-meta.xml
<CustomField>
    <fullName>Retail_price__c</fullName>
    <label>Retail Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>