force-app/main/default/objects/Market_Value__c/fields/Retail_Value__c.field-meta.xml
<CustomField>
    <fullName>Retail_Value__c</fullName>
    <description>The average retaile value from the retail business including tax and VAT etc. on the Competitive Vehicles For Sale</description>
    <inlineHelpText>The average retaile value from the retail business including tax and VAT etc. on the Competitive Vehicles For Sale</inlineHelpText>
    <label>Retail Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>