force-app/main/default/objects/Market_Value__c/fields/Steel_Price__c.field-meta.xml
<CustomField>
    <fullName>Steel_Price__c</fullName>
    <formula>Vehicle__r.Sixt_steel_purchase_price__c</formula>
    <label>Steel Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>