force-app/main/default/objects/Market_Value__c/fields/Tax_Value__c.field-meta.xml
<CustomField>
    <fullName>Tax_Value__c</fullName>
    <formula>Vehicle__r.Tax_value_incl_VAT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>