force-app/main/default/objects/Market_Value__c/fields/Wholesale_Price__c.field-meta.xml
<CustomField>
    <fullName>Wholesale_Price__c</fullName>
    <label>Wholesale Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>